--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,99 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css';
+@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+body {
+  background: white;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+img {
+    align-items: right;
+    height: 50px;
+}
+
+a {
+  cursor: pointer;
+  border-radius: 5px;
+  border:#f5f5f5;
+}
+
+.navbar {
+  margin-bottom: 60px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.card {
+  border: none;
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
+  box-shadow: 4px 8px 12px 0 rgba(0,0,0,0.2);
+  margin-bottom: 30px;
+  border-radius: 15px;
+}
+
+.w-60 {
+  width: 60px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 10px;
+  font-weight: 600;
+}
+
+.social-links li a {
+  -webkit-border-radius: 50%;
+  background-color: rgba(89, 206, 181, .85);
+  border-radius: 50%;
+  color: #fff;
+  display: inline-block;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  width: 30px;
+  font-size: 12px;
+}
+
+a {
+  color: #707070;
+}
+i {
+color: white;
+}
+
+a {
+color: white;
+}
+
+table {
+    font-family: 'Montserrat', sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th {
+    text-align: center;
+    padding: 8px;
+    color: white;
+    background: green;
+    font-family: 'Montserrat', sans-serif;
+    border-color: black;
+    border: 1px solid black;
+  }
+  
+  td {
+    font-family: 'Montserrat', sans-serif;
+    border: 1px solid black;
+    border-radius: 10px;
+    text-align: center;
+    padding: 8px;
+    color: green;
+    background: #FFFFFF;
+  }
