--- a/src/styles.css
+++ b/src/styles.css
@@ -97,3 +97,5 @@ table {
     color: green;
     background: #FFFFFF;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
