--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,11 @@ a {
   cursor: pointer;
   border-radius: 5px;
   border:#f5f5f5;
+  margin-right: 10px;
+}
+
+#action{
+  margin-right: 10px;
 }
 
 .navbar {
@@ -64,10 +69,6 @@ h6 {
 a {
   color: #707070;
 }
-i {
-color: white;
-}
-
 a {
 color: white;
 }
@@ -76,6 +77,7 @@ table {
     font-family: 'Montserrat', sans-serif;
     border-collapse: collapse;
     width: 100%;
+    margin-bottom: 50px;
   }
   
   th {
@@ -83,13 +85,11 @@ table {
     padding: 8px;
     color: white;
     background: green;
-    font-family: 'Montserrat', sans-serif;
     border-color: black;
     border: 1px solid black;
   }
   
   td {
-    font-family: 'Montserrat', sans-serif;
     border: 1px solid black;
     border-radius: 10px;
     text-align: center;
@@ -97,5 +97,5 @@ table {
     color: green;
     background: #FFFFFF;
   }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
