--- a/src/styles.css
+++ b/src/styles.css
@@ -1,31 +1,40 @@
-@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css';
-@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import "https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css";
+@import "https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
 
 body {
   background: white;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 img {
-    align-items: right;
-    height: 50px;
+  align-items: right;
+  height: 50px;
 }
 
 a {
   cursor: pointer;
   border-radius: 5px;
-  border:#f5f5f5;
+  border: #f5f5f5;
   margin-right: 10px;
 }
 
-#action{
+#action {
   margin-right: 10px;
 }
 
 .navbar {
   margin-bottom: 60px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
   padding: 20px;
@@ -33,8 +42,8 @@ a {
 
 .card {
   border: none;
-  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
-  box-shadow: 4px 8px 12px 0 rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 4px 8px 12px 0 rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
   border-radius: 15px;
 }
@@ -55,7 +64,7 @@ h6 {
 
 .social-links li a {
   -webkit-border-radius: 50%;
-  background-color: rgba(89, 206, 181, .85);
+  background-color: rgba(89, 206, 181, 0.85);
   border-radius: 50%;
   color: #fff;
   display: inline-block;
@@ -70,32 +79,30 @@ a {
   color: #707070;
 }
 a {
-color: white;
+  color: white;
 }
 
 table {
-    font-family: 'Montserrat', sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-    margin-bottom: 50px;
-  }
-  
-  th {
-    text-align: center;
-    padding: 8px;
-    color: white;
-    background: green;
-    border-color: black;
-    border: 1px solid black;
-  }
-  
-  td {
-    border: 1px solid black;
-    border-radius: 10px;
-    text-align: center;
-    padding: 8px;
-    color: green;
-    background: #FFFFFF;
-  }
+  font-family: "Montserrat", sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 50px;
+}
 
+th {
+  text-align: center;
+  padding: 8px;
+  color: white;
+  background: green;
+  border-color: black;
+  border: 1px solid black;
+}
 
+td {
+  border: 1px solid black;
+  border-radius: 10px;
+  text-align: center;
+  padding: 8px;
+  color: green;
+  background: #ffffff;
+}
